//
// Copyright 2025 The Project Oak Authors
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

// Private memory service definition: A memory consists of a datablob content
// and one or more tags. The service allows users to add a tagged memory and get
// the memories by tags.

syntax = "proto3";

package oak.private_memory;

// A simple key value pair.
message DataBlob {
  string id = 1;
  bytes blob = 2;
}

message WriteUnencryptedDataBlobRequest {
  DataBlob data_blob = 1;
}

message WriteDataBlobRequest {
  DataBlob data_blob = 1;
}

message WriteDataBlobResponse {}

message WriteUnencryptedDataBlobResponse {}

message ReadDataBlobRequest {
  string id = 1;
  // Whether to perform a strong read to ensure the latest data is returned.
  bool strong_read = 2;
}

message ReadUnencryptedDataBlobRequest {
  string id = 1;
  // Whether to perform a strong read to ensure the latest data is returned.
  bool strong_read = 2;
}

message ReadDataBlobResponse {
  DataBlob data_blob = 1;
}

message ReadUnencryptedDataBlobResponse {
  DataBlob data_blob = 1;
}

// A metadata blob containing a version.
message MetadataBlob {
  // The data blob containing the metadata info.
  DataBlob data_blob = 1;

  // An opaque version string representing the version of this metadata blob.
  // The string should not be parsed or interpreted by the client. It should
  // only be saved to pass back verbatim to calls to WriteMetadataBlob.
  string version = 2;
}

message ReadMetadataBlobRequest {
  string id = 1;
}

message ReadMetadataBlobResponse {
  MetadataBlob metadata_blob = 1;
}

message WriteMetadataBlobRequest {
  MetadataBlob metadata_blob = 1;
}

message WriteMetadataBlobResponse {}

message ReadMetadataBlobStreamRequest {
  string id = 1;
}

message ReadMetadataBlobStreamResponse {
  oneof response {
    // The initial response containing the metadata. The blob field in the
    // data_blob can be empty or contain the first chunk.
    //
    // This variant should only be sent once, as the first request. Sending it
    // more than once will result in an error.
    MetadataBlob metadata_blob = 1;

    // Subsequent chunks of the blob. These will be concatenated in the order
    // received to construct the final payload. Sending this variant before
    // sending the metadata_blob will result in an error.
    bytes chunk = 2;
  }
}

message WriteMetadataBlobStreamRequest {
  oneof request {
    // The initial request containing the metadata. The blob field in the
    // data_blob can be empty or contain the first chunk.
    MetadataBlob metadata_blob = 1;

    // Subsequent chunks of the blob. They can be concatenated in the order
    // received to construct the final payload. The server will indicate the end
    // of the file by sending a half-close.
    bytes chunk = 2;
  }
}

message WriteMetadataBlobStreamResponse {}

message ResetDatabaseRequest {}

message ResetDatabaseResponse {}

message DeleteBlobsRequest {
  repeated string ids = 1;
}

message DeleteBlobsResponse {}

// The untrusted database service that the trusted application can connect to.
service SealedMemoryDatabaseService {
  // Writes a data blob to the database.
  rpc WriteDataBlob(WriteDataBlobRequest) returns (WriteDataBlobResponse) {}
  // Reads a data blob from the database.
  rpc ReadDataBlob(ReadDataBlobRequest) returns (ReadDataBlobResponse) {}

  // Write a metadata blob to the database.
  //
  // If the current version of the stored metadata blob does not match the
  // version provided in the request, the write will fail with a "failed
  // precondition" status code.
  //
  // In this case, you should fetch the latest version using `ReadMetadataBlob`,
  // apply your changes on the latest version, and re-attempt the write
  // operation.
  rpc WriteMetadataBlob(WriteMetadataBlobRequest)
      returns (WriteMetadataBlobResponse) {}

  // Read a metadatablob from the database.
  //
  // The returned metadatablob will include a version string; this version
  // string should be provided verbatim in the call to WriteMetadataBlob if
  // changes are to be committed.
  rpc ReadMetadataBlob(ReadMetadataBlobRequest)
      returns (ReadMetadataBlobResponse) {}

  // Write a metadata blob to the database using a stream.
  // The first request message must contain the metadata_blob.
  // Subsequent request messages should contain chunks of the blob.
  //
  // There's no requirement on the chunk szies; they can very from
  // request-to-request, and be of any size, as llong as it fits in the message
  // size limit.
  rpc WriteMetadataBlobStream(stream WriteMetadataBlobStreamRequest)
      returns (WriteMetadataBlobStreamResponse) {}

  // Read a metadata blob from the database using a stream.
  // The first response message will contain the metadata_blob.
  // Subsequent response messages will contain chunks of the blob.
  //
  // The returned chunks can be of any size, and the size can vary from
  // response-to-response. The client should concatenate them in the order
  // received to construct the final payload.
  rpc ReadMetadataBlobStream(ReadMetadataBlobStreamRequest)
      returns (stream ReadMetadataBlobStreamResponse) {}

  // Writes an unencrypted data blob to the database.
  rpc WriteUnencryptedDataBlob(WriteUnencryptedDataBlobRequest)
      returns (WriteUnencryptedDataBlobResponse) {}
  // Reads an unencrypted data blob from the database.
  rpc ReadUnencryptedDataBlob(ReadUnencryptedDataBlobRequest)
      returns (ReadUnencryptedDataBlobResponse) {}

  // Resets the database. This is mainly used for testing.
  rpc ResetDatabase(ResetDatabaseRequest) returns (ResetDatabaseResponse) {}

  // Deletes multiple blobs from the database.
  rpc DeleteBlobs(DeleteBlobsRequest) returns (DeleteBlobsResponse) {}
}
